# MicroGPT

./: .gitignore  micro_gpt.py  pyproject.toml
