[project]
name = "microgpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Blazej Domagala",email = "blazej.domagala1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
